src/objects/Open_Houses__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <inlineHelpText>The listing this open house is about.</inlineHelpText>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Open Houses</relationshipLabel>
        <relationshipName>Open_Houses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Open House</label>
    <nameField>
        <label>Open Houses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Houses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>